--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "bcryptjs": "^2.4.3",
         "dotenv": "^8.2.0",
         "env": "0.0.2",
+        "eslint": "^6.8.0",
         "express": "^4.17.1",
         "express-router": "0.0.1",
         "express-validator": "^6.4.0",
