--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
         "express-router": "0.0.1",
         "express-validator": "^6.4.0",
         "glob": "^7.1.6",
+        "moment": "^2.24.0",
+        "node-cron": "^2.0.3",
         "pg": "^7.18.1",
         "sequelize": "^5.21.4"
     }
