--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "sequelize-cli": "^5.5.1"
     },
     "dependencies": {
+        "agenda": "^3.0.0",
         "bcryptjs": "^2.4.3",
         "dotenv": "^8.2.0",
         "env": "0.0.2",
@@ -22,6 +23,7 @@
         "express-validator": "^6.4.0",
         "glob": "^7.1.6",
         "moment": "^2.24.0",
+        "mongoose": "^5.9.5",
         "node-cron": "^2.0.3",
         "pg": "^7.18.1",
         "sequelize": "^5.21.4"
