--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "mongoose": "^5.9.5",
         "node-cron": "^2.0.3",
         "pg": "^7.18.1",
+        "pubnub": "^4.27.4",
         "sequelize": "^5.21.4"
     }
 }
