--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "express-router": "0.0.1",
         "express-validator": "^6.4.0",
         "glob": "^7.1.6",
+        "jsonwebtoken": "^8.5.1",
         "moment": "^2.24.0",
         "node-cron": "^2.0.3",
         "pg": "^7.18.1",
